[gd_scene load_steps=22 format=3 uid="uid://kk2asmgd6tvj"]

[ext_resource type="Script" uid="uid://cwh65nn485hkw" path="res://UI/StartRunScene.gd" id="1_jv30d"]
[ext_resource type="Theme" uid="uid://b66cxik023bhq" path="res://WoodenTheme.tres" id="1_rwjul"]
[ext_resource type="Script" uid="uid://cw3dhyvgklx5j" path="res://Events/Buttons/SelectBeetleButton.gd" id="2_wtvvh"]
[ext_resource type="Texture2D" uid="uid://det6ixr7btlfe" path="res://Assets/Buttons/LadybugButtonNormal.png" id="3_aflcc"]
[ext_resource type="Texture2D" uid="uid://jhnhir2w2bck" path="res://Assets/Buttons/LadybugButtonHover.png" id="4_tpym5"]
[ext_resource type="Texture2D" uid="uid://cwxdtw3rk7j5a" path="res://Assets/Buttons/StagButtonNormal.png" id="5_1lit5"]
[ext_resource type="Texture2D" uid="uid://x8rdsnsfbeqa" path="res://Assets/SplashArt/Ladybug.png" id="6_3axts"]
[ext_resource type="Texture2D" uid="uid://cw3nicbu74lok" path="res://Assets/Buttons/StagButtonHover.png" id="6_65lmm"]
[ext_resource type="Script" uid="uid://xbmqdllx4qii" path="res://Events/Buttons/start_run_button.gd" id="6_k3mop"]
[ext_resource type="PackedScene" uid="uid://cbah3vkpn4u2u" path="res://Mandibles/LadybugMandibles.tscn" id="7_nb4wt"]
[ext_resource type="PackedScene" uid="uid://dv0umde6eh74m" path="res://Carapace/LadybugCarapace.tscn" id="8_b5wg8"]
[ext_resource type="PackedScene" uid="uid://casu874iwsjf8" path="res://Legs/LadybugLegs/LadybugLeftLeg.tscn" id="9_2e8gm"]
[ext_resource type="PackedScene" uid="uid://8ljyepidst4j" path="res://Legs/LadybugLegs/LadybugRightLeg.tscn" id="10_rdyde"]
[ext_resource type="Script" uid="uid://by7hw8lejqabe" path="res://UI/StartRunInfo.gd" id="10_s8kac"]
[ext_resource type="Texture2D" uid="uid://ck4r0y76vh4mu" path="res://Assets/SplashArt/StagBeetle.png" id="12_m7dyg"]
[ext_resource type="PackedScene" uid="uid://cly0g404spggv" path="res://Mandibles/StagBeetleMandible.tscn" id="14_j25xc"]
[ext_resource type="PackedScene" uid="uid://cl7k5wo62q8t0" path="res://Carapace/StagBeetleCarapace.tscn" id="15_34xk0"]
[ext_resource type="PackedScene" uid="uid://b5akp8ch011e3" path="res://Legs/StagBeetleLegs/StagBeetleLeftLeg.tscn" id="16_1peb4"]
[ext_resource type="PackedScene" uid="uid://03jx71jb2mtw" path="res://Legs/StagBeetleLegs/StagBeetleRightLeg.tscn" id="17_cb01e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6mh8s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d2hij"]

[node name="StartRunScene" type="CanvasLayer"]
script = ExtResource("1_jv30d")

[node name="Info" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_rwjul")
script = ExtResource("10_s8kac")

[node name="SplashArt" type="TextureRect" parent="Info"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Info"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 256
theme_override_constants/margin_top = 256

[node name="VBoxContainer" type="VBoxContainer" parent="Info/MarginContainer"]
layout_mode = 2

[node name="BeetleType" type="Label" parent="Info/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 96
theme_override_styles/normal = SubResource("StyleBoxEmpty_6mh8s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Container" type="Container" parent="Info/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="BeetleDescription" type="Label" parent="Info/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_d2hij")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 64

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SelectBeetle1Button" type="TextureButton" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_aflcc")
texture_hover = ExtResource("4_tpym5")
script = ExtResource("2_wtvvh")
beetle_mandibles = ExtResource("7_nb4wt")
beetle_carapace = ExtResource("8_b5wg8")
beetle_left_leg = ExtResource("9_2e8gm")
beetle_right_leg = ExtResource("10_rdyde")
beetle_nature = "Brave"
splash_art = ExtResource("6_3axts")
beetle_type = "LadyBug"
beetle_description = "Tiny red dude that excels at being weak."

[node name="Container" type="Container" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2

[node name="SelectBeetle2Button" type="TextureButton" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("5_1lit5")
texture_hover = ExtResource("6_65lmm")
script = ExtResource("2_wtvvh")
beetle_mandibles = ExtResource("14_j25xc")
beetle_carapace = ExtResource("15_34xk0")
beetle_left_leg = ExtResource("16_1peb4")
beetle_right_leg = ExtResource("17_cb01e")
beetle_nature = "Dumb"
splash_art = ExtResource("12_m7dyg")
beetle_type = "Stag Beetle"
beetle_description = "The big brother bully beatdown beetle."

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_rwjul")
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 80

[node name="StartRunContainer" type="VBoxContainer" parent="MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
theme = ExtResource("1_rwjul")

[node name="InputName" type="LineEdit" parent="MarginContainer2/StartRunContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "NAME YOUR BUG"
alignment = 1

[node name="StartRunButton" type="Button" parent="MarginContainer2/StartRunContainer"]
layout_mode = 2
text = "BUG OUT!!!"
script = ExtResource("6_k3mop")

[connection signal="pressed" from="MarginContainer/HBoxContainer/SelectBeetle1Button" to="MarginContainer/HBoxContainer/SelectBeetle1Button" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/SelectBeetle2Button" to="MarginContainer/HBoxContainer/SelectBeetle2Button" method="_on_pressed"]
[connection signal="text_changed" from="MarginContainer2/StartRunContainer/InputName" to="." method="_on_input_name_text_changed"]
[connection signal="pressed" from="MarginContainer2/StartRunContainer/StartRunButton" to="MarginContainer2/StartRunContainer/StartRunButton" method="_on_pressed"]
